# ckb-contract-template

./: .env.dev  Cargo.toml  README.md  docker.sh
contracts/always-success/: Cargo.toml
contracts/playground/: Cargo.toml
contracts/playground/src/: entry.rs  error.rs
libs/common/: Cargo.toml  build.rs
libs/common/src/: lib.rs  macros.rs  util.rs
tests/: Cargo.toml
tests/src/: lib.rs  playground.rs
tests/src/util/: constants.rs  mod.rs  template_generator.rs  template_parser.rs  util.rs
