[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# ckb crates
ckb-mock-tx-types = "=0.113.0"
ckb-script = { version="=0.113.0", default-features = false }
ckb-traits = { version="=0.113.0" }
ckb-chain-spec = "=0.113.0"
ckb-hash = "=0.113.0"
ckb-jsonrpc-types = "=0.113.0"
ckb-types = { workspace = true }
# third party crates
hex = "0.4.3"
thiserror = { workspace = true }
lazy_static = "1.4.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
regex = "1.0"
rand = "0.8.3"
chrono = { version = "0.4" }
